Fix alignment of emoji in about

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -360,6 +360,9 @@ a.disabled {
   filter: invert(1);
 }
 
-.emoji {
+#about .emoji {
   height: 1em;
+  position: relative;
+  top: -4px;
+  vertical-align: bottom;
 }
